[tool.poetry]
name = "cliai"
version = "0.1.2"
description = "Command-line interface for OpenAI ChatGPT"
authors = ["Baksi <myself@baksili.codes>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
openai = "^0.27.1"
click = "^8.1.3"
click-aliases = "^1.0.1"

[tool.poetry.scripts]
cliai = "cliai.cli:cli"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
