[tool.poetry]
name = "cliai"
version = "0.2.7"
description = "Command-line interface for OpenAI ChatGPT"
authors = ["Baksi <myself@baksili.codes>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.1"
click = "^8.1.3"
click-aliases = "^1.0.1"
questionary = "^1.10.0"
pygments = "^2.14.0"

[tool.poetry.scripts]
cliai = "cliai.cli:cli"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
